--- a/config.ini.example
+++ b/config.ini.example
@@ -1,4 +1,15 @@
 [flickr]
 key = xxx
 secret = yyy
+pagesize = 100
+maximagesize = 1000
+
+[paths]
+imgs = 'img'
+results = 'res'
+encodings = 'pickles'
+
+[recognition]
+detectionmethod = 'ncc'
+threshold = 0.4
 
